fixing open collapse layout

--- a/blocks/faqtab/faqtab.css
+++ b/blocks/faqtab/faqtab.css
@@ -44,10 +44,18 @@
 }
 
 /* ---------- accordion ---------- */
+.faqtab.block {
+  padding: 0 48px;
+  grid-column: 2;
+}
+
+.faqtab.block[hidden] {
+  display: none !important;
+}
+
 .faqtab.block details {
   border-bottom: 1px solid #dcdcdc;
-  padding: 28px 0 40px 48px;
-  margin-right: 48px;
+  padding: 28px 0; /* CRITICAL: This adds the vertical space between questions. */
 }
 
 .faqtab.block summary {
@@ -55,7 +63,7 @@
   cursor: pointer;
   font-weight: 700;
   position: relative;
-  padding-right: 32px;
+  padding-right: 32px; /* Makes room for the dropdown arrow */
 }
 
 .faqtab.block summary::-webkit-details-marker {
@@ -71,10 +79,6 @@
 
 .faqtab.block details[open] summary::after {
   transform: rotate(180deg);
-}
-
-.faqtab.block details:not([open]) {
-  padding-bottom: 0;
 }
 
 .faqtab-answer {
